// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tutorial Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="backdrop svelte-n1b0tb"
    style="--top: 0px; --right: 0px; --bottom: 0px; --left: 0px;"
  >
    <svg
      class="connector svelte-n1b0tb"
    >
      <path
        d="M 0 0 Q 0 0 0 0"
      />
    </svg>
     
    <article
      class="svelte-n1b0tb"
    >
      <p>
        Welcome to Mélodie!
      </p>
       
      <p>
        Let's start by selecting the folder on your drive holding your music.
      </p>
    </article>
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
   
  <div>
    <span
      class="svelte-1iwn886"
    >
      <button
        class="svelte-j6xhgj"
      >
        <i
          class="material-icons svelte-j6xhgj"
        >
          announcement
        </i>
         
        <span>
          Click me first
        </span>
         
      </button>
    </span>
    <span
      class="svelte-1iwn886"
    >
      <button
        class="svelte-j6xhgj"
      >
        <i
          class="material-icons svelte-j6xhgj"
        >
          emoji_events
        </i>
         
        <span>
          Then click me
        </span>
         
      </button>
    </span>
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</section>
`;

exports[`Storyshots Components/Tutorial Positionned 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="backdrop svelte-n1b0tb"
    style="--top: 0px; --right: 0px; --bottom: 0px; --left: 0px;"
  >
    <svg
      class="connector svelte-n1b0tb"
    >
      <path
        d="M 0 0 Q 0 0 0 0"
      />
    </svg>
     
    <article
      class="svelte-n1b0tb"
      style="top: 75%; left: 5%;"
    >
      <p>
        Welcome to Mélodie!
      </p>
       
      <p>
        Let's start by selecting the folder on your drive holding your music.
      </p>
    </article>
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
   
  <div>
    <span
      class="svelte-1iwn886"
    >
      <button
        class="svelte-j6xhgj"
      >
        <i
          class="material-icons svelte-j6xhgj"
        >
          announcement
        </i>
         
        <span>
          Click me first
        </span>
         
      </button>
    </span>
    <span
      class="svelte-1iwn886"
    >
      <button
        class="svelte-j6xhgj"
      >
        <i
          class="material-icons svelte-j6xhgj"
        >
          emoji_events
        </i>
         
        <span>
          Then click me
        </span>
         
      </button>
    </span>
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</section>
`;
